--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -33,6 +33,15 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
+      - name: Debug - Check secret format
+        run: |
+          echo "Secret length: ${#GCP_CREDENTIALS}"
+          echo "First 100 chars: ${GCP_CREDENTIALS:0:100}"
+          # Create the key file manually
+          echo "${{ secrets.GCP_CREDENTIALS }}" > /tmp/key.json
+          echo "Key file created. Size: $(wc -c < /tmp/key.json) bytes"
+          head -5 /tmp/key.json
+
       - name: Set up gcloud CLI
         uses: google-github-actions/setup-gcloud@v2
         with:
